# Automated-purchase-process

./: .gitignore  CLAUDE.md  MANIFEST.in  PLAN.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
erpnext_procurement_ai/: MANIFEST.in  hooks.py  patches.txt
erpnext_procurement_ai/chain_builder/: attachments.py  document_matcher.py  purchase_invoice.py  purchase_order.py  purchase_receipt.py  retrospective.py  supplier.py
erpnext_procurement_ai/erpnext_procurement_ai/chain_builder/: attachments.py  retrospective.py
erpnext_procurement_ai/erpnext_procurement_ai/config/: desktop.py
erpnext_procurement_ai/erpnext_procurement_ai/extraction/: pdf_parser.py
erpnext_procurement_ai/erpnext_procurement_ai/llm/: local_trust.py  models.py  nodes.py  output_guard.py  sanitizer.py
erpnext_procurement_ai/erpnext_procurement_ai/procurement_ai/api/: status.py
erpnext_procurement_ai/erpnext_procurement_ai/public/js/: purchase_order_custom.js
erpnext_procurement_ai/erpnext_procurement_ai/utils/: logging.py
erpnext_procurement_ai/fixtures/: custom_field.json
erpnext_procurement_ai/llm/: consensus.py  nodes.py  output_guard.py  prompts.py  schemas.py
erpnext_procurement_ai/patches/: remove_ai_retrospective_field.py
erpnext_procurement_ai/procurement_ai/api/: ingest.py  status.py
erpnext_procurement_ai/procurement_ai/doctype/ai_escalation_log/: ai_escalation_log.json  ai_escalation_log.py
erpnext_procurement_ai/public/js/: purchase_invoice_custom.js  purchase_receipt_custom.js
erpnext_procurement_ai/tests/: test_amount_checker.py
erpnext_procurement_ai/validation/: amount_checker.py  field_validator.py  supplier_matcher.py
procurement_ai/: hooks.py  modules.txt  patches.txt
procurement_ai/chain_builder/: purchase_invoice.py  purchase_order.py  purchase_receipt.py  retrospective.py  supplier.py
procurement_ai/extraction/: email_parser.py  ocr_engine.py  pdf_parser.py  preprocessor.py
procurement_ai/llm/: graph.py  local_health.py  models.py  nodes.py  prompts.py  sanitizer.py  schemas.py
procurement_ai/procurement_ai/api/: ingest.py  status.py
procurement_ai/tests/: test_frappe_integration.py  test_module_imports.py
procurement_ai/utils/: logging.py  security.py
procurement_ai/validation/: supplier_matcher.py
purchase_automation/: hooks.py  modules.txt
purchase_automation/config/: desktop.py
purchase_automation/extraction/: comparator.py  extractor.py  preprocessor.py  prompt_templates.py  schemas.py
purchase_automation/llm/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  openai_provider.py  registry.py
purchase_automation/matching/: item_matcher.py  supplier_matcher.py
purchase_automation/orchestrator/: workflow.py
tests/: conftest.py  test_amount_checker.py  test_comparator.py  test_consensus.py  test_create_documents.py  test_document_matcher.py  test_extraction.py  test_field_validator.py  test_graph.py  test_llm_providers.py  test_models.py  test_output_guard.py  test_resolve_item.py  test_resolve_uom.py  test_retrospective.py  test_sanitize_data.py  test_sanitizer.py  test_schemas.py  test_security.py  test_supplier.py  test_supplier_link.py  test_tax_account.py  test_verify_amounts.py
(+30 files in other folders)
