[project]
name = "procurement_ai"
version = "0.1.0"
description = "AI-powered procurement automation for ERPNext v15"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Meltingplot GmbH" },
]
dependencies = [
    "langgraph>=0.2.0,<1.0",
    "langchain-core>=0.3.0,<1.0",
    "langchain-anthropic>=0.3.0,<1.0",
    "langchain-openai>=0.2.0,<1.0",
    "langchain-google-genai>=2.0.0,<3.0",
    "pdfplumber>=0.11.0,<1.0",
    "pytesseract>=0.3.10,<1.0",
    "Pillow>=10.0.0,<13.0",
    "pydantic>=2.0.0,<3.0",
    "python-magic>=0.4.27,<0.5",
    "requests>=2.31.0,<3.0",
    # Pulled transitively by pdfplumber -> pdfminer.six ("cryptography>=36",
    # unbounded). Cap it below 49 so `bench get-app --upgrade` can't drag it
    # past the window Frappe's pinned pyOpenSSL (~=26.0.0, needs cryptography
    # <49) supports — otherwise the env ends up with a torn pyOpenSSL/
    # cryptography pair ("module 'lib' has no attribute 'GEN_EMAIL'").
    # Revisit when Frappe bumps its TLS stack past cryptography 48.
    "cryptography>=42.0.0,<49.0.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench]
app-name = "procurement_ai"
app-publisher = "Meltingplot GmbH"
app-description = "AI-powered procurement automation for ERPNext"
app-email = "info@meltingplot.com"
app-color = "#4F46E5"
app-icon = "octicon octicon-package"
app-license = "MIT"
required-apps = ["frappe", "erpnext"]
